Improved treeview theme, added file-explorer styled navigation through compounds/lists

--- a/REghZyNBTEditor/App.xaml
+++ b/REghZyNBTEditor/App.xaml
@@ -6,8 +6,12 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-
-                <ResourceDictionary Source="Themes/DarkTheme.xaml"/>
+                <ResourceDictionary Source="Themes/Dark_DarkBackLightBorder.xaml"/>
+                <ResourceDictionary Source="Themes/ControlColours.xaml"/>
+                <ResourceDictionary Source="Themes/Controls.xaml"/>
+                <!--
+                <ResourceDictionary Source="Themes/NBTTreeStyle.xaml"/>
+                -->
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
