--- a/REghZyNBTEditor/NBT/Controls/NBTPrimitiveControl.xaml
+++ b/REghZyNBTEditor/NBT/Controls/NBTPrimitiveControl.xaml
@@ -16,6 +16,6 @@
         <local:NBTHeaderControl DataContext="{Binding}"/>
         <TextBlock Padding="1" HorizontalAlignment="Left" VerticalAlignment="Center" 
                    Text="{Binding Value, UpdateSourceTrigger=PropertyChanged, FallbackValue=NO_NAME}" 
-                   FontFamily="Consolas"/>
+                   FontFamily="Consolas" Foreground="{DynamicResource AREghZyBrush.Glyph.Disabled}"/>
     </StackPanel>
 </UserControl>
