--- a/REghZyNBTEditor/NBT/Controls/NBTListControl.xaml
+++ b/REghZyNBTEditor/NBT/Controls/NBTListControl.xaml
@@ -10,6 +10,6 @@
              d:DesignWidth="200">
     <StackPanel Orientation="Horizontal">
         <local:NBTHeaderControl DataContext="{Binding}"/>
-        <TextBlock Padding="3 0" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Data.Count, UpdateSourceTrigger=PropertyChanged, StringFormat={}({0} elements)}"/>
+        <TextBlock Padding="3 0" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Data.Count, UpdateSourceTrigger=PropertyChanged, StringFormat={}({0} elements)}" Foreground="{DynamicResource AREghZyBrush.Glyph.Disabled}"/>
     </StackPanel>
 </UserControl>
